[package]
name = "adsys_mount"
description = "Binary for handling the user mounts policy of adsys.\nThis is not meant to be executed manually."
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
anyhow = "^1"
gio = "0.16"
glib = "0.16"
log = "0.4"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^1"
time = { version = "0.3", features = ["formatting", "macros"] }
